# ehip-tools

./: CMakeLists.txt
src/: cmd.c  cmd_nslookup.c  cmd_ping.c  cmd_telnet.c
